// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbt-export-Regression in export to better biblatex #1491-sentencecase=on+guess+caseprotection=as-needed.bibtex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "D.",
            "lastName": "Mateescu",
          },
          Object {
            "firstName": "M.P.",
            "lastName": "Païdoussis",
          },
          Object {
            "firstName": "F.",
            "lastName": "Belanger",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Mateescu, D.",
          "Païdoussis, M.P.",
          "Belanger, F.",
        ],
        "doi": Array [
          "10.1006/jfls.1994.1024",
        ],
        "issn": Array [
          "08899746",
        ],
        "journal": Array [
          "Journal of Fluids and Structures",
        ],
        "language": Array [
          "en",
        ],
        "month": Array [
          "07",
        ],
        "number": Array [
          "5",
        ],
        "pages": Array [
          "489–507",
        ],
        "shorttitle": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I",
        ],
        "title": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I: Computational Solutions Based on a Time-Integration Method",
        ],
        "volume": Array [
          "8",
        ],
        "year": Array [
          "1994",
        ],
      },
      "key": "mateescu_unsteady_1994",
      "type": "article",
    },
  ],
  "errors": Array [],
  "groups": Object {
    "fileDirectory": null,
    "groups": Object {},
    "root": Array [],
    "version": null,
  },
  "preamble": Array [],
  "strings": Object {},
}
`;

exports[`export Regression in export to better biblatex #1491.bibtex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "D.",
            "lastName": "Mateescu",
          },
          Object {
            "firstName": "M.P.",
            "lastName": "Païdoussis",
          },
          Object {
            "firstName": "F.",
            "lastName": "Belanger",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Mateescu, D.",
          "Païdoussis, M.P.",
          "Belanger, F.",
        ],
        "doi": Array [
          "10.1006/jfls.1994.1024",
        ],
        "issn": Array [
          "08899746",
        ],
        "journal": Array [
          "Journal of Fluids and Structures",
        ],
        "language": Array [
          "en",
        ],
        "month": Array [
          "07",
        ],
        "number": Array [
          "5",
        ],
        "pages": Array [
          "489–507",
        ],
        "shorttitle": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I",
        ],
        "title": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I: Computational Solutions Based on a Time-Integration Method",
        ],
        "volume": Array [
          "8",
        ],
        "year": Array [
          "1994",
        ],
      },
      "key": "mateescu_unsteady_1994",
      "type": "article",
    },
  ],
  "errors": Array [],
  "preamble": Array [],
  "strings": Object {},
}
`;
